--- a/icons/icons.css
+++ b/icons/icons.css
@@ -59,6 +59,28 @@
     content: "\f424"
 }
 
+.fa-magnifying-glass:before{
+    content: "\f002"
+}
+
+.fa-cart-shopping:before{
+    content: "\f07a"
+}
+
+.fa-heart:before{
+    content: "\f004"
+}
+
+.fa-right-to-bracket:before{
+    content: "\f2f6"
+}
+
+
+.fa-facebook:before{
+    content: "\f09a"
+}
+
+
 
 
 /*---------------------------------*/
