--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,12 @@ header .header-body img {
 
 footer {
   background: var(--secondary-1, #FF6C0D);
+  margin-top: 9.6875rem;
+}
+@media (max-width: 768px) {
+  footer {
+    margin-top: 6.6875rem;
+  }
 }
 footer .inner {
   position: relative;
@@ -588,6 +594,50 @@ footer .inner .footer-text .footer-text-item a {
   font-size: 1.125rem;
   font-weight: 300;
   line-height: normal;
+}
+
+.filter {
+  margin-top: 145px;
+}
+@media (max-width: 992px) {
+  .filter {
+    margin-top: 195px;
+  }
+}
+.filter .inner {
+  display: flex;
+  justify-content: space-between;
+}
+.filter .inner .buttons {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.filter .inner .buttons .btn-filter {
+  display: flex;
+  cursor: pointer;
+  padding: 4px 24px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-radius: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.75);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: normal;
+  margin-right: 15px;
+}
+.filter .inner .buttons .btn-filter:last-child {
+  margin-right: 0;
+}
+.filter .inner .btn-orange {
+  padding: 8px 48px;
+  margin-bottom: 10px;
+}
+
+.products-sale {
+  margin-top: 2.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
