--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,9 @@ footer .inner {
   footer .inner {
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
+    align-items: start;
+    padding-left: 20px;
   }
 }
 footer .inner .footer-logo {
@@ -579,9 +581,8 @@ footer .inner .footer-text {
 }
 @media (max-width: 576px) {
   footer .inner .footer-text {
-    margin-left: 60px;
     margin-top: 10px;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: unset;
@@ -608,15 +609,26 @@ footer .inner .footer-text .footer-text-item a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 992px) {
+  .filter .inner {
+    align-items: start;
+  }
+}
 .filter .inner .buttons {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
+@media (max-width: 992px) {
+  .filter .inner .buttons {
+    flex-direction: column;
+    align-items: unset;
+  }
+}
 .filter .inner .buttons .btn-filter {
   display: flex;
   cursor: pointer;
-  padding: 4px 24px;
+  padding: 0.25rem 1.5rem;
   justify-content: center;
   text-align: center;
   align-items: center;
@@ -626,10 +638,20 @@ footer .inner .footer-text .footer-text-item a {
   font-size: 1rem;
   font-weight: 500;
   line-height: normal;
-  margin-right: 15px;
+  margin-right: 0.9375rem;
+}
+@media (max-width: 992px) {
+  .filter .inner .buttons .btn-filter {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
 .filter .inner .buttons .btn-filter:last-child {
   margin-right: 0;
+}
+.filter .inner .buttons .btn-filter.active {
+  background: #4A4542;
+  color: #fff;
 }
 .filter .inner .btn-orange {
   padding: 8px 48px;
