--- a/css/style.scss
+++ b/css/style.scss
@@ -47,11 +47,6 @@ a {
     font-size: 14px;
   }
 }
-@media (max-width: 768px) {
-  html {
-    font-size: 13px;
-  }
-}
 
 .container{
   max-width: 1243px !important;
@@ -59,20 +54,41 @@ a {
 }
 
 .btn-orange{
-  padding: 0.5rem 1.5rem;
-  border-radius: 15px;
+  padding: 0.5rem 1.5rem 0.5625rem 1.5rem;
+  border-radius: 0.9375rem;
   background: #FF6C0D;
   text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #FFF;
   font-size: 1.125rem;
   font-weight: 500;
 }
 
+.dropdown-menu {
+  min-width: auto !important;
+}
 
-
+.dropdown-toggle{
+  outline: none !important;
+  border: 0 !important;
+  &.show{
+    &::after {
+      transform: rotate(-180deg);
+    }
+  }
+  &::after {
+    content: "\f078";
+    font-family: FontAwesome, serif;
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: unset;
+    border-top: unset;
+    border-right: unset;
+    border-bottom: unset;
+    border-left: unset;
+    transition: 0.3s;
+    transform: rotate(0deg);
+  }
+}
 
 
 //... Menu ..........
@@ -84,6 +100,17 @@ nav{
   width: 100%;
   z-index: 1000;
   background: #fff;
+
+  .dropdown-toggle{
+    padding: 0;
+    margin-right: -8px;
+    &::after {
+      content: "";
+    }
+  }
+  .dropdown-menu{
+    margin-left: -32px !important;
+  }
 
   .number-flag{
     display: flex;
@@ -278,6 +305,9 @@ nav{
         .btn-orange{
           @media (max-width: 1190px) {
             font-size: 0;
+            border-radius: 5px !important;
+            padding-left: 10px;
+            padding-right: 10px;
           }
           @media (max-width: 576px) {
            display: none;
@@ -313,10 +343,11 @@ nav{
     top: 110px;
     height: 100%;
     bottom: 0;
-    background: rgba(255, 255, 255, 0.87);
+    background: rgba(255, 255, 255, 0.95);
     backdrop-filter: blur(4px);
-    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     transition: .3s;
+    transform: translateX(-100%);
+    opacity: 0;
   }
   .menu-item-mobile-teg{
     display: block;
@@ -331,8 +362,8 @@ nav{
     line-height: normal;
   }
   &.active{
-    clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
-    transition: .3s;
+    transform: translateY(0);
+    opacity: 1;
   }
   .contact-block{
     padding: 50px 20px 0 20px;
@@ -376,17 +407,18 @@ header{
 
 //............Products
 
+.topSales-heading{
+  color: #000;
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 2.5rem;
+}
+
 .products{
   margin-top: 5.6875rem;
-@media (max-width: 576px) {
-  margin-top: 3rem;
-}
-  .topSales-heading{
-    color: #000;
-    font-size: 1.75rem;
-    font-weight: 500;
-    line-height: normal;
-    margin-bottom: 40px;
+  @media (max-width: 576px) {
+    margin-top: 3rem;
   }
 
   .productItem{
@@ -575,7 +607,7 @@ footer{
   background: var(--secondary-1, #FF6C0D);
   margin-top: 9.6875rem;
   @media (max-width: 768px) {
-    margin-top: 6.6875rem;
+    margin-top: 3.6875rem;
   }
       .inner{
         position: relative;
@@ -651,7 +683,6 @@ footer{
     align-items: center;
     flex-wrap: wrap;
     @media (max-width: 992px) {
-        flex-direction: column;
           align-items: unset;
     }
     .btn-filter{
@@ -669,7 +700,7 @@ footer{
       line-height: normal;
       margin-right: 0.9375rem;
       @media (max-width: 992px) {
-        margin-right: 0;
+        margin-right: 5px;
         margin-bottom: 10px;
       }
       &:last-child{
@@ -706,3 +737,40 @@ footer{
 
 
 // ............ Product End
+
+
+
+.header-slider{
+  &-row{
+    @include flex('s', 'c');
+  }
+  &-item{
+    color: rgba(0, 0, 0, 0.80);
+    font-size: 1.25rem;
+    font-weight: 500;
+    @include flex('sb', 'c');
+    flex-direction: column;
+    gap: 1.125rem;
+    cursor: pointer;
+  }
+}
+
+.splide__arrow{
+  border: 0.3125rem solid #FF6C0D !important;
+  width: 2.625rem !important;
+  height: 2.625rem !important;
+  background: #fff !important;
+  svg{
+    fill: #FF6C0D !important;
+  }
+}
+.splide__arrow--next{
+  @media (min-width: 1245px){
+    right: 0 !important;
+  }
+}
+.splide__arrow--prev{
+  @media (min-width: 1245px){
+    left: 0 !important;
+  }
+}
