--- a/icons/icons.css
+++ b/icons/icons.css
@@ -80,6 +80,20 @@
     content: "\f09a"
 }
 
+.fa-arrows-up-down:before{
+    content: "\f07d"
+}
+
+.fa-chevron-left:before{
+    content: "\f053"
+}
+
+.fa-chevron-right:before{
+    content: "\f054"
+}
+
+
+
 
 
 
