--- a/css/style.css
+++ b/css/style.css
@@ -662,4 +662,224 @@ footer .inner .footer-text .footer-text-item a {
   margin-top: 2.5rem;
 }
 
+.product-header {
+  margin-top: 145px;
+}
+@media (max-width: 992px) {
+  .product-header {
+    margin-top: 195px;
+  }
+}
+.product-header .image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 15px;
+  position: relative;
+}
+.product-header .image .arrows-up-down {
+  background: transparent;
+  position: absolute;
+  right: 50px;
+  top: 20px;
+  transform: rotate(45deg);
+}
+.product-header .image .arrows-up-down i {
+  color: #fff;
+  font-size: 30px;
+}
+.product-header .image .left {
+  background: rgba(217, 217, 217, 0.3);
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.25rem;
+  color: #fff;
+  font-size: 1.6875rem;
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.product-header .image .right {
+  background: rgba(217, 217, 217, 0.3);
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.25rem;
+  color: #fff;
+  font-size: 1.6875rem;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.product-header .box {
+  width: 100%;
+  height: 100%;
+}
+.product-header .box .title h3 {
+  color: #000;
+  font-size: 1.125rem;
+  font-weight: 500;
+}
+.product-header .box .title span {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.product-header .box .title h5 {
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: 26px;
+}
+.product-header .box .buttons {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.7rem;
+  gap: 10px;
+}
+.product-header .box .buttons .btn-gray {
+  display: flex;
+  padding: 4px 12px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+.product-header .box .price-box {
+  padding-top: 6.25rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .product-header .box .price-box {
+    margin-top: 5rem;
+  }
+}
+.product-header .box .price-box .icons {
+  display: flex;
+  align-items: center;
+}
+.product-header .box .price-box .icons .btn-orange {
+  padding: 8px 40px;
+}
+.product-header .box .price-box .icons .icon {
+  cursor: pointer;
+}
+.product-header .box .price-box .icons .icon.active .fa-regular {
+  display: none;
+}
+.product-header .box .price-box .icons .icon.active .fa-solid {
+  display: initial;
+}
+.product-header .box .price-box .icons .icon .fa-solid {
+  display: none;
+}
+.product-header .box .price-box .icons .icon i {
+  color: #FF6C0D;
+  font-size: 18px;
+}
+.product-header .box .price-box .price .price-item {
+  display: flex;
+  align-items: center;
+}
+.product-header .box .price-box .price .price-item .line {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-decoration: line-through;
+  margin-right: 5px;
+}
+.product-header .box .price-box .price .price-item .sale {
+  background: #FF6C0D;
+  padding: 2px 6px;
+}
+.product-header .box .price-box .price .price-item .sale span {
+  color: #FFF;
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+.product-header .box .price-box .price h4 {
+  color: #D52029;
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-top: 5px;
+}
+
+.product {
+  margin-top: 5.625rem;
+}
+@media (max-width: 768px) {
+  .product {
+    margin-top: 4rem;
+  }
+}
+.product .product-heading {
+  color: #000;
+  font-size: 1.75rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 2.5rem;
+}
+
+.tab {
+  margin-top: 5.5rem;
+}
+@media (max-width: 768px) {
+  .tab {
+    margin-top: 4.5rem;
+  }
+}
+.tab .nav-tabs {
+  border-bottom: 0;
+}
+.tab .nav-tabs .nav-link {
+  padding: 8px 24px;
+  color: #000;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+  font-size: 1.125rem;
+  font-weight: 600;
+  width: 214px;
+}
+@media (max-width: 768px) {
+  .tab .nav-tabs .nav-link {
+    width: auto;
+  }
+}
+.tab .nav-tabs .nav-link.active {
+  border-radius: 10px;
+  border-bottom: 2px solid #FF6C0D;
+  background: #FFF;
+}
+.tab .tab-pane {
+  margin-top: 3.75rem;
+}
+.tab .tab-pane p {
+  color: #000;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: normal;
+  max-width: 960px;
+}
+@media (max-width: 576px) {
+  .tab .tab-pane {
+    font-weight: 400;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
