--- a/css/style.scss
+++ b/css/style.scss
@@ -701,8 +701,228 @@ footer{
 
 
 
-//............ Product
+//............ ......Product.html
+
+.product-header{
+  margin-top: 145px;
+  @media (max-width: 992px) {
+    margin-top: 195px;
+  }
+  .image{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    position: relative;
+    .arrows-up-down{
+      background: transparent;
+      position: absolute;
+      right: 50px;
+      top: 20px;
+      transform: rotate(45deg);
+      i{
+       color: #fff;
+        font-size: 30px;
+      }
+    }
+    .left{
+      background: rgba(217, 217, 217, 0.30);;
+      width: 2.5rem;
+      height: 2.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 1.25rem;
+      color: #fff;
+      font-size: 1.6875rem;
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .right{
+      background: rgba(217, 217, 217, 0.30);;
+      width: 2.5rem;
+      height: 2.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 1.25rem;
+      color: #fff;
+      font-size: 1.6875rem;
+      position: absolute;
+      right: 30px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  .box{
+    width: 100%;
+    height: 100%;
+    .title{
+      h3{
+        color: #000;
+        font-size: 1.125rem;
+        font-weight: 500;
+      }
+      span{
+        color: rgba(0, 0, 0, 0.50);
+        font-size: 0.875rem;
+        font-weight: 500;
+      }
+      h5{
+        color: rgba(0, 0, 0, 0.90);
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin-top: 26px;
+      }
+    }
+    .buttons{
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: .7rem;
+      gap: 10px;
+      .btn-gray{
+        display: flex;
+        padding: 4px 12px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 15px;
+        border: 1px solid rgba(0, 0, 0, 0.50);
+        color: rgba(0, 0, 0, 0.60);
+        font-size: 1.25rem;
+        font-weight: 500;
+      }
+    }
+    .price-box {
+      padding-top: 6.25rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media (max-width: 768px) {
+        margin-top: 5rem;
+      }
+      .icons{
+        display: flex;
+        align-items: center;
+        .btn-orange{
+          padding: 8px 40px;
+        }
+        .icon{
+          cursor: pointer;
+          &.active{
+            .fa-regular{
+              display: none;
+            }
+            .fa-solid{
+              display: initial;
+            }
+          }
+          .fa-solid{
+            display: none;
+          }
+          i{
+            color: #FF6C0D;
+            font-size: 18px;
+          }
+        }
+      }
+      .price {
+        .price-item {
+          display: flex;
+          align-items: center;
+
+          .line {
+            color: rgba(0, 0, 0, 0.70);
+            font-size: 0.75rem;
+            font-weight: 500;
+            text-decoration: line-through;
+            margin-right: 5px;
+          }
+
+          .sale {
+            background: #FF6C0D;
+            padding: 2px 6px;
+
+            span {
+              color: #FFF;
+              font-size: 0.75rem;
+              font-weight: 400;
+            }
+          }
+        }
+
+        h4 {
+          color: #D52029;
+          font-size: 1.25rem;
+          font-weight: 700;
+          margin-top: 5px;
+        }
+      }
+    }
+  }
 
 
+}
 
-// ............ Product End
+.product{
+  margin-top: 5.625rem;
+  @media (max-width: 768px) {
+    margin-top: 4rem;
+  }
+  .product-heading{
+    color: #000;
+    font-size: 1.75rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 2.5rem;
+  }
+}
+
+.tab{
+  margin-top: 5.5rem;
+  @media (max-width: 768px) {
+    margin-top: 4.5rem;
+  }
+    .nav-tabs{
+      border-bottom: 0;
+      .nav-link{
+        padding: 8px 24px;
+        color: #000;
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.10);
+        font-size: 1.125rem;
+        font-weight: 600;
+        width: 214px;
+        @media (max-width: 768px) {
+          width: auto;
+        }
+        &.active{
+          border-radius: 10px;
+          border-bottom: 2px solid #FF6C0D;
+          background: #FFF;
+        }
+
+      }
+    }
+  .tab-pane{
+    margin-top: 3.75rem;
+    p{
+      color: #000;
+      font-size: 1.125rem;
+      font-weight: 500;
+      line-height: normal;
+      max-width: 960px;
+    }
+    @media (max-width: 576px) {
+      font-weight: 400;
+    }
+  }
+}
+
+// ............ Product.html End
