--- a/css/style.css
+++ b/css/style.css
@@ -988,4 +988,12 @@ footer .inner .footer-text .footer-text-item a {
   }
 }
 
+.modal-body .image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 80%;
+  height: 80%;
+}
+
 /*# sourceMappingURL=style.css.map */
