--- a/css/style.css
+++ b/css/style.css
@@ -988,12 +988,23 @@ footer .inner .footer-text .footer-text-item a {
   }
 }
 
-.modal-body .image {
+.modal-dialog {
+  max-width: 800px;
+  width: 100%;
+}
+@media (max-width: 576px) {
+  .modal-dialog {
+    max-width: 98%;
+    width: 100%;
+  }
+}
+.modal-dialog .modal-body .image {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
 }
 
 /*# sourceMappingURL=style.css.map */
