--- a/css/style.scss
+++ b/css/style.scss
@@ -1022,13 +1022,23 @@ footer{
 
 //.  Modal body
 
+.modal-dialog {
+  max-width: 800px;
+  width: 100%;
+@media (max-width: 576px) {
+  max-width: 98%;
+  width: 100%;
+}
+  .modal-body {
 
-.modal-body{
-  .image{
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 80%;
-    height: 80%;
+    .image {
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+      min-height: 500px;
+    }
   }
+
 }
